<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminHome"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/hospitalImage"
        android:layout_width="350dp"
        android:layout_height="235dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_imagev1"
        android:background="@drawable/hospital_image_border" />

    <TextView
        android:id="@+id/adminWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hospitalImage" />

    <Button
        android:id="@+id/adminCalendarBtn"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/admin_calendar_btn"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/logoutAdmin"
        app:layout_constraintEnd_toStartOf="@+id/patientListBtn"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/necessary_button_border" />

    <Button
        android:id="@+id/patientListBtn"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/patient_list_btn"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/logoutAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/adminCalendarBtn"
        android:background="@drawable/necessary_button_border" />

    <TextView
        android:id="@+id/placeholderText"
        android:layout_width="349dp"
        android:layout_height="174dp"
        android:layout_marginTop="12dp"
        android:text="@string/admin_home_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminWelcome" />

    <TextView
        android:id="@+id/logoutAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/logout_btn"
        android:textColor="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>